# lycaon

./: .eslintrc.json  Anchor.toml  README.md  ideas.md  package.json
app/: package.json
app/components/: Container.tsx  Header.tsx  WalletButton.tsx
app/pages/: index.tsx
programs/raffle/: Cargo.toml
programs/raffle/src/: lib.rs
programs/raffle/src/instructions/: buy_tickets.rs  claim_prize.rs  create_raffle.rs  init_bank.rs  init_vault.rs  mod.rs  pick_winner.rs  pick_winners.rs
programs/raffle/src/state/: bank.rs  mod.rs  raffle.rs  tickets.rs
tests/: raffle.ts  utils.ts
